--- a/.gitignore
+++ b/.gitignore
@@ -1,158 +1,105 @@
-# ═══════════════════════════════════════════════════════════════
-# 🚫 REGLA CRÍTICA: ARCHIVOS QUE NUNCA DEBEN SUBIR A GIT
-# ═══════════════════════════════════════════════════════════════
-
-# 🔥 ARCHIVOS GRANDES - MÁXIMA PRIORIDAD
-# Estos archivos causan que GitHub rechace todos los pushes futuros
-*.apk
-*.aab
-*.ipa
-*.so
-*.dll
-*.dylib
-*.dill
-*.cache
-*.bin
-*.jar
-*.zip
-*.tar.gz
-*.tar
-*.7z
-
-# 📱 BUILD FOLDERS - NUNCA SUBIR
-build/
-android/app/build/
-android/build/
-ios/build/
-web/build/
-macos/build/
-windows/build/
-linux/build/
-
-# 🛠️ FLUTTER/DART ARTIFACTS
-.dart_tool/
-.flutter-plugins
-.flutter-plugins-dependencies
-.packages
-.pub-cache/
-.pub/
-**/.packages
-**/.flutter-plugins
-**/.flutter-plugins-dependencies
-
-# 📦 DEPENDENCIES
-pubspec.lock
-.packages
-node_modules/
-package-lock.json
-yarn.lock
-
-# 🔧 ANDROID SPECIFIC
-android/app/debug/
-android/app/profile/
-android/app/release/
-android/gradle/
-android/.gradle/
-android/captures/
-android/gradlew
-android/gradlew.bat
-android/local.properties
-android/app/google-services.json
-android/key.properties
-android/upload-keystore.jks
-*.keystore
-android/**/*.bin
-android/**/*.lock
-android/**/executionHistory/
-android/**/fileHashes/
-
-# 🍎 IOS SPECIFIC
-ios/Flutter/flutter_exports_environment.sh
-ios/Runner.xcworkspace/xcshareddata/
-ios/Runner.xcodeproj/xcshareddata/
-ios/Runner.xcodeproj/project.xcworkspace/xcshareddata/
-ios/Pods/
-ios/.symlinks/
-ios/Flutter/ephemeral/
-ios/ServiceDefinitions.json
-
-# 💻 EDITOR FILES
+# Miscellaneous
+*.class
+*.log
+*.pyc
+*.swp
 .DS_Store
 .atom/
 .buildlog/
 .history
 .svn/
 migrate_working_dir/
-.vscode/settings.json
-.vscode/launch.json
-.idea/
+
+# IntelliJ related
 *.iml
 *.ipr
 *.iws
-.cursor/
+.idea/
 
-# 🔐 SECRETS AND KEYS
+# The .vscode folder contains launch configuration and tasks you configure in
+# VS Code which you may wish to be included in version control, so this line
+# is commented out by default.
+#.vscode/
+
+# Flutter/Dart/Pub related
+**/doc/api/
+**/ios/Flutter/flutter_assets/
+**/ios/Runner/GeneratedPluginRegistrant.*
+**/android/app/debug
+**/android/app/profile
+**/android/app/release
+
+# Android related
+**/android/**/gradle-wrapper.jar
+**/android/.gradle
+**/android/captures/
+**/android/gradlew
+**/android/gradlew.bat
+**/android/local.properties
+**/android/**/GeneratedPluginRegistrant.java
+
+# iOS/XCode related
+**/ios/**/*.mode1v3
+**/ios/**/*.mode2v3
+**/ios/**/*.moved-aside
+**/ios/**/*.pbxuser
+**/ios/**/*.perspectivev3
+**/ios/**/*sync/
+**/ios/**/.sconsign.dblite
+**/ios/**/.tags*
+**/ios/**/.vagrant/
+**/ios/**/DerivedData/
+**/ios/**/Icon?
+**/ios/**/Pods/
+**/ios/**/.symlinks/
+**/ios/**/profile
+**/ios/**/xcuserdata
+**/ios/.generated/
+**/ios/Flutter/.last_build_id
+**/ios/Flutter/App.framework
+**/ios/Flutter/Flutter.framework
+**/ios/Flutter/Flutter.podspec
+**/ios/Flutter/Generated.xcconfig
+**/ios/Flutter/ephemeral/
+**/ios/Flutter/app.flx
+**/ios/Flutter/app.zip
+**/ios/Flutter/flutter_assets/
+**/ios/Flutter/flutter_export_environment.sh
+**/ios/ServiceDefinitions.json
+**/ios/Runner/GeneratedPluginRegistrant.*
+
+# Exceptions to above rules.
+!**/ios/**/default.mode1v3
+!**/ios/**/default.mode2v3
+!**/ios/**/default.pbxuser
+!**/ios/**/default.perspectivev3
+
+# Web related
+lib/generated_plugin_registrant.dart
+
+# Symbolication related
+app.*.symbols
+
+# Obfuscation related
+app.*.map.json
+
+# Build artifacts
+/build/
+
+# Environment files (keep these secret)
 .env
-.env.*
-*.pem
-*.p12
-*.p8
-firebase_options.dart
+.env.local
+.env.production
+.env.development
+
+# Secrets and API keys
 google-services.json
 GoogleService-Info.plist
-supabase_credentials.json
+*.p8
+*.mobileprovision
+*.jks
+key.properties
 
-# 🗃️ TEMPORARY FILES
-*.tmp
-*.temp
-*.log
-*.swp
-*.swo
-*~
-.~*
-#*#
-
-# 📊 ANALYTICS AND REPORTS
-coverage/
-test-results/
-reports/
-*.lcov
-
-# 🔄 VERSION CONTROL
-*.orig
-*.rej
-.git/hooks/
-.git/info/
-.git/logs/
-.git/refs/remotes/*/
-.git/objects/pack/
-
-# 📱 MOBILE SPECIFIC
-*.hprof
-*.trace
-profiling/
-
-# 🌐 WEB SPECIFIC
-web/favicon.png
-web/icons/
-web/manifest.json
-web/robots.txt
-
-# 🔧 FLUTTER TOOLS
-.fvm/
-flutter_*.log
-.flutter-devtools/
-
-# ═══════════════════════════════════════════════════════════════
-# 📋 IMPORTANTE: ARCHIVOS QUE SÍ DEBEN SUBIR
-# ═══════════════════════════════════════════════════════════════
-# ✅ lib/ - Código fuente principal
-# ✅ pubspec.yaml - Dependencias
-# ✅ analysis_options.yaml - Configuración linting
-# ✅ README.md - Documentación
-# ✅ *.dart - Archivos de código
-# ✅ *.sql - Scripts de base de datos
-# ✅ assets/ - Recursos del app (imágenes, iconos)
-# ✅ l10n.yaml - Configuración i18n
-# ✅ .gitignore - Este archivo
-# ═══════════════════════════════════════════════════════════════
+# Local SQL files (no subir a producción)
+*.sql
+!supabase_setup.sql
