--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,6 +84,7 @@ dependencies:
   stream_transform: 2.1.0
   supabase: 2.7.0
   supabase_flutter: 2.9.0
+  image_picker: 1.0.7
   timeago: 3.7.1
   url_launcher: 6.3.1
   url_launcher_android: 6.3.16
