--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,7 @@ dependencies:
   supabase_flutter: 2.9.0
   image_picker: 1.0.7
   timeago: 3.7.1
+  share_plus: 10.1.3
   url_launcher: 6.3.1
   url_launcher_android: 6.3.16
   url_launcher_ios: 6.3.3
