Fix: Add payment_logos assets to pubspec.yaml
PROBLEM SOLVED:
- Flutter couldn't find payment logos because assets path wasn't specified
- Added 'assets/images/payment_logos/' to pubspec.yaml assets section
- Ran 'flutter pub get' to register new assets

RESULT:
- Payment logos should now load correctly
- No more 'Asset not found' errors
- Official logos will display instead of generic icons

ASSETS:
- 9 payment method logos (128x128px PNG)
- Apple Pay, Google Pay, Klarna, Afterpay, etc.
- All logos properly registered with Flutter

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -144,6 +144,7 @@ flutter:
   assets:
     - assets/fonts/
     - assets/images/
+    - assets/images/payment_logos/
     - assets/videos/
     - assets/audios/
     - assets/rive_animations/
