Setup Google Pay infrastructure and configuration
GOOGLE PAY SETUP - PHASE 1:
✅ Added 'pay' package (v2.0.0) for Google Pay support
✅ Created google_pay_config.json with Stripe gateway configuration
✅ Updated AndroidManifest.xml with Google Pay metadata
✅ Added google_pay_config.json to assets in pubspec.yaml
✅ Created GOOGLE_PAY_IMPLEMENTATION.md documentation

CONFIGURATION DETAILS:
- Environment: TEST (for development)
- Gateway: Stripe
- Allowed Networks: VISA, MASTERCARD, AMEX, DISCOVER
- Auth Methods: PAN_ONLY, CRYPTOGRAM_3DS
- Billing Address: Required with full format
- Merchant Name: LandGo Travel

ANDROID MANIFEST:
- Added com.google.android.gms.wallet.api.enabled metadata
- Enables Google Pay API in the app

NEXT PHASE:
- Implement Google Pay button widget
- Integrate payment flow in ReviewSummaryPage
- Handle payment processing with Stripe
- Test complete flow

STATUS: Phase 1 of 4 completed (Configuration ✅)

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -56,7 +56,10 @@
             android:name="flutterEmbedding"
             android:value="2" />
 
-
+        <!-- Google Pay -->
+        <meta-data
+            android:name="com.google.android.gms.wallet.api.enabled"
+            android:value="true" />
 
 
     </application>
